rPi spacing fix

--- a/main.css
+++ b/main.css
@@ -222,7 +222,7 @@ tr:nth-child(odd) {
     bottom: 0;
     left: 160px;
     position: absolute;
-    margin-bottom: -130px;
+    margin-bottom: -129px;
     font-family: 'tahoma';
     overflow: hidden;
     transition: margin-bottom 0.3s ease-in-out;
